Добавление основной логики программы(сортировка + составление пути)

--- a/lab1/src/CMakeLists.txt
+++ b/lab1/src/CMakeLists.txt
@@ -1,8 +1,11 @@
 add_library(input_lib input.c)
 add_library(class_lib class.c)
+add_library(pather_lib pather.c)
 
 target_include_directories(input_lib PUBLIC ../include)
 target_include_directories(class_lib PUBLIC ../include)
+target_include_directories(pather_lib PUBLIC ../include)
 
 target_compile_features(input_lib PUBLIC cxx_std_11)
 target_compile_features(class_lib PUBLIC cxx_std_11)
+target_compile_features(pather_lib PUBLIC cxx_std_11)
