--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -7,13 +7,17 @@ project(StructProject VERSION 1.0
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
 
 # Добавление покрытия кода
-include(CodeCoverage)
-append_coverage_compiler_flags()
-setup_target_for_coverage_gcovr_html(
-  NAME coverage
-  EXECUTABLE ctest
-  BASE_DIRECTORY "${PROJECT_SOURCE_DIR}"
-  EXCLUDE "build/*" "tests/*")
+message("CMAKE_BUILD_TYPE IS ${CMAKE_BUILD_TYPE}")
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+  message("Inside 2")
+  include(CodeCoverage)
+  append_coverage_compiler_flags()
+  setup_target_for_coverage_gcovr_html(
+    NAME coverage
+    EXECUTABLE ctest
+    BASE_DIRECTORY "${PROJECT_SOURCE_DIR}"
+    EXCLUDE "build/*" "tests/*")
+endif()
 
 enable_testing()
 
