--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: configure
-      run: ./configure.sh
+      run: cd lab1 && ./configure.sh
     - name: make
       run: cd build && make
     - name: test
