Добавление артефакта с покрытием index.html

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -23,3 +23,8 @@ jobs:
       run: cd lab1 && cd build && make
     - name: Test
       run: cd lab1 && cd build && make coverage
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v2
+      with:
+        name: code-coverage-report
+        path: lab1/build/coverage/index.html
