Расширение игнора ненужных файлов для покрытия кода

--- a/lab1/CMakeLists.txt
+++ b/lab1/CMakeLists.txt
@@ -14,7 +14,7 @@ if (CMAKE_BUILD_TYPE MATCHES Debug)
     NAME coverage
     EXECUTABLE valgrind --leak-check=full --show-leak-kinds=all ctest
     BASE_DIRECTORY "${PROJECT_SOURCE_DIR}"
-    EXCLUDE "build/*" "tests/*")
+    EXCLUDE "build/*" "tests/*" "main/main.c" "src/errors.c")
 endif()
 
 enable_testing()
