--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -9,9 +9,22 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: configure
-      run: ./configure.sh
-    - name: make
-      run: cd build && make
-    - name: test
-      run: cd build && make coverage
+    - name: Install valgrind
+      run: sudo apt-get install -y valgrind
+    - name: Install gcovr
+      run: sudo apt-get install python3-setuptools && sudo pip3 install git+https://github.com/gcovr/gcovr.git
+    - name: Install cppcheck
+      run: sudo apt-get install -y cppcheck
+    - name: Run Linter
+      run: cd lab1/src && cppcheck *.c
+    - name: Configure
+      run: cd lab1 && ./configure.sh
+    - name: Make
+      run: cd lab1 && cd build && make
+        #    - name: Test
+        #      run: cd lab1 && cd build && make coverage
+        #    - name: Archive code coverage results
+        #      uses: actions/upload-artifact@v2
+        #      with:
+        #        name: code-coverage-report
+        #        path: lab1/build/coverage/index.html
