--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -16,15 +16,15 @@ jobs:
     - name: Install cppcheck
       run: sudo apt-get install -y cppcheck
     - name: Run Linter
-      run: cd lab1/src && cppcheck *.c
+      run: cd iz2/src && cppcheck *.c
     - name: Configure
-      run: cd lab1 && ./configure.sh
+      run: cd iz2 && ./configure.sh
     - name: Make
-      run: cd lab1 && cd build && make
+      run: cd iz2 && cd build && make
         #    - name: Test
-        #      run: cd lab1 && cd build && make coverage
+        #      run: cd iz2 && cd build && make coverage
         #    - name: Archive code coverage results
         #      uses: actions/upload-artifact@v2
         #      with:
         #        name: code-coverage-report
-        #        path: lab1/build/coverage/index.html
+        #        path: iz2/build/coverage/index.html
