Add args parsing + io operations + error handling + build configurations

--- a/iz2/src/CMakeLists.txt
+++ b/iz2/src/CMakeLists.txt
@@ -1,14 +1,14 @@
-#add_library(input_lib input.c)
-#add_library(class_lib class.c)
-#add_library(pather_lib pather.c)
-#add_library(errors_lib errors.c)
-#
-#target_include_directories(input_lib PUBLIC ../include)
-#target_include_directories(class_lib PUBLIC ../include)
-#target_include_directories(pather_lib PUBLIC ../include)
-#target_include_directories(errors_lib PUBLIC ../include)
+add_library(pos_lib pos.c)
+add_library(args_lib args.c)
+add_library(io_lib io.c)
+add_library(errors_lib errors_handler.c)
 
-#target_compile_features(input_lib PUBLIC cxx_std_11)
-#target_compile_features(class_lib PUBLIC cxx_std_11)
-#target_compile_features(pather_lib PUBLIC cxx_std_11)
-#target_compile_features(errors_lib PUBLIC cxx_std_11)
+target_include_directories(pos_lib PUBLIC ../include)
+target_include_directories(args_lib PUBLIC ../include)
+target_include_directories(io_lib PUBLIC ../include)
+target_include_directories(errors_lib PUBLIC ../include)
+
+target_compile_features(pos_lib PUBLIC cxx_std_11)
+target_compile_features(args_lib PUBLIC cxx_std_11)
+target_compile_features(io_lib PUBLIC cxx_std_11)
+target_compile_features(errors_lib PUBLIC cxx_std_11)
