add naive mean algorithm and write function for it + write error handling

--- a/iz2/main/CMakeLists.txt
+++ b/iz2/main/CMakeLists.txt
@@ -3,7 +3,8 @@ target_include_directories(main PUBLIC ../include)
 
 target_compile_features(main PRIVATE cxx_std_17)
 
-target_link_libraries(main PRIVATE args_lib)
-target_link_libraries(main PRIVATE errors_lib)
-target_link_libraries(main PRIVATE pos_lib)
-target_link_libraries(main PRIVATE io_lib)
+target_link_libraries(main PRIVATE naive_mean)
+target_link_libraries(main PRIVATE args)
+target_link_libraries(main PRIVATE errors)
+target_link_libraries(main PRIVATE pos)
+target_link_libraries(main PRIVATE io)
