--- a/iz2/src/CMakeLists.txt
+++ b/iz2/src/CMakeLists.txt
@@ -1,14 +1,17 @@
-add_library(pos_lib pos.c)
-add_library(args_lib args.c)
-add_library(io_lib io.c)
-add_library(errors_lib errors_handler.c)
+add_library(naive_mean naive_mean.c)
+add_library(pos pos.c)
+add_library(args args.c)
+add_library(io io.c)
+add_library(errors errors_handler.c)
 
-target_include_directories(pos_lib PUBLIC ../include)
-target_include_directories(args_lib PUBLIC ../include)
-target_include_directories(io_lib PUBLIC ../include)
-target_include_directories(errors_lib PUBLIC ../include)
+target_include_directories(naive_mean PUBLIC ../include)
+target_include_directories(pos PUBLIC ../include)
+target_include_directories(args PUBLIC ../include)
+target_include_directories(io PUBLIC ../include)
+target_include_directories(errors PUBLIC ../include)
 
-target_compile_features(pos_lib PUBLIC cxx_std_11)
-target_compile_features(args_lib PUBLIC cxx_std_11)
-target_compile_features(io_lib PUBLIC cxx_std_11)
-target_compile_features(errors_lib PUBLIC cxx_std_11)
+target_compile_features(naive_mean PUBLIC cxx_std_11)
+target_compile_features(pos PUBLIC cxx_std_11)
+target_compile_features(args PUBLIC cxx_std_11)
+target_compile_features(io PUBLIC cxx_std_11)
+target_compile_features(errors PUBLIC cxx_std_11)
