Add path variable to cmakelists files

--- a/iz2/src/CMakeLists.txt
+++ b/iz2/src/CMakeLists.txt
@@ -4,11 +4,11 @@ add_library(args args.c)
 add_library(io io.c)
 add_library(errors errors_handler.c)
 
-target_include_directories(naive_mean PUBLIC ../include)
-target_include_directories(pos PUBLIC ../include)
-target_include_directories(args PUBLIC ../include)
-target_include_directories(io PUBLIC ../include)
-target_include_directories(errors PUBLIC ../include)
+target_include_directories(naive_mean PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(pos PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(args PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(io PUBLIC ${PROJECT_SOURCE_DIR}/include)
+target_include_directories(errors PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 target_compile_features(naive_mean PUBLIC cxx_std_11)
 target_compile_features(pos PUBLIC cxx_std_11)
