--- a/iz2/CMakeLists.txt
+++ b/iz2/CMakeLists.txt
@@ -14,7 +14,10 @@ if (CMAKE_BUILD_TYPE MATCHES Debug)
     NAME coverage
     EXECUTABLE valgrind --leak-check=full --show-leak-kinds=all ctest
     BASE_DIRECTORY "${PROJECT_SOURCE_DIR}"
-    EXCLUDE "build/*" "tests/*" "main/main.c" "src/errors.c")
+    EXCLUDE "${PROJECT_SOURCE_DIR}/build/*" 
+    "${PROJECT_SOURCE_DIR}/tests/*" 
+    "${PROJECT_SOURCE_DIR}/main/main.c" 
+    "${$PROJECT_SOURCE_DIR}/src/errors.c")
 endif()
 
 enable_testing()
