--- a/iz2/main/CMakeLists.txt
+++ b/iz2/main/CMakeLists.txt
@@ -6,5 +6,6 @@ target_compile_features(main PRIVATE cxx_std_17)
 target_link_libraries(main PRIVATE naive_mean)
 target_link_libraries(main PRIVATE args)
 target_link_libraries(main PRIVATE errors)
+target_link_libraries(main PRIVATE pos_array)
 target_link_libraries(main PRIVATE pos)
 target_link_libraries(main PRIVATE io)
