Add parallel implementation

--- a/iz2/main/CMakeLists.txt
+++ b/iz2/main/CMakeLists.txt
@@ -3,7 +3,9 @@ target_include_directories(main PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
 target_compile_features(main PRIVATE cxx_std_17)
 
-target_link_libraries(main PRIVATE naive_mean)
+#target_link_libraries(main PRIVATE naive_mean)
+target_link_libraries(main PRIVATE pthread)
+target_link_libraries(main PRIVATE parallel_mean)
 target_link_libraries(main PRIVATE args)
 target_link_libraries(main PRIVATE errors)
 target_link_libraries(main PRIVATE pos_array)
