change standards + change shebang for shell script

--- a/iz2/CMakeLists.txt
+++ b/iz2/CMakeLists.txt
@@ -10,16 +10,18 @@ set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DPROC_DEBUG")
 
 # Добавление покрытия кода
-include(CodeCoverage)
-append_coverage_compiler_flags()
-setup_target_for_coverage_gcovr_html(
-  NAME coverage
-  EXECUTABLE valgrind --leak-check=full --show-leak-kinds=all ctest
-  BASE_DIRECTORY "${PROJECT_SOURCE_DIR}"
-  EXCLUDE "${PROJECT_SOURCE_DIR}/build/*" 
-  "${PROJECT_SOURCE_DIR}/tests/*" 
-  "${PROJECT_SOURCE_DIR}/main/main.c" 
-  "${$PROJECT_SOURCE_DIR}/src/errors.c")
+if (CMAKE_BUILD_TYPE MATCHES Debug)
+  include(CodeCoverage)
+  append_coverage_compiler_flags()
+  setup_target_for_coverage_gcovr_html(
+    NAME coverage
+    EXECUTABLE valgrind --leak-check=full --show-leak-kinds=all ctest
+    BASE_DIRECTORY "${PROJECT_SOURCE_DIR}"
+    EXCLUDE "${PROJECT_SOURCE_DIR}/build/*" 
+    "${PROJECT_SOURCE_DIR}/tests/*" 
+    "${PROJECT_SOURCE_DIR}/main/main.c" 
+    "${$PROJECT_SOURCE_DIR}/src/errors.c")
+endif()
 
 enable_testing()
 
