--- a/iz2/src/CMakeLists.txt
+++ b/iz2/src/CMakeLists.txt
@@ -14,10 +14,10 @@ target_include_directories(args PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(io PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(errors PUBLIC ${PROJECT_SOURCE_DIR}/include)
 
-target_compile_features(parallel_mean PUBLIC cxx_std_11)
-target_compile_features(naive_mean PUBLIC cxx_std_11)
-target_compile_features(pos PUBLIC cxx_std_11)
-target_compile_features(pos_array PUBLIC cxx_std_11)
-target_compile_features(args PUBLIC cxx_std_11)
-target_compile_features(io PUBLIC cxx_std_11)
-target_compile_features(errors PUBLIC cxx_std_11)
+target_compile_features(parallel_mean PUBLIC c_std_11)
+target_compile_features(naive_mean PUBLIC c_std_11)
+target_compile_features(pos PUBLIC c_std_11)
+target_compile_features(pos_array PUBLIC c_std_11)
+target_compile_features(args PUBLIC c_std_11)
+target_compile_features(io PUBLIC c_std_11)
+target_compile_features(errors PUBLIC c_std_11)
