--- a/iz2/CMakeLists.txt
+++ b/iz2/CMakeLists.txt
@@ -8,6 +8,7 @@ option(USE_PARALLEL "Using parallel implementation" OFF)
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DPROC_DEBUG")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wpedantic")
 
 # Code coverage
 if (CMAKE_BUILD_TYPE MATCHES Debug)
@@ -15,7 +16,7 @@ if (CMAKE_BUILD_TYPE MATCHES Debug)
   append_coverage_compiler_flags()
   setup_target_for_coverage_gcovr_html(
     NAME coverage
-    EXECUTABLE valgrind --leak-check=full --show-leak-kinds=all ctest
+    EXECUTABLE valgrind --leak-check=full --show-leak-kinds=all ctest -V
     BASE_DIRECTORY "${PROJECT_SOURCE_DIR}"
     EXCLUDE "${PROJECT_SOURCE_DIR}/build/*" 
     "${PROJECT_SOURCE_DIR}/tests/*" 
@@ -27,4 +28,4 @@ enable_testing()
 
 add_subdirectory(src)
 add_subdirectory(main)
-#add_subdirectory(tests)
+add_subdirectory(tests)
