--- a/iz2/CMakeLists.txt
+++ b/iz2/CMakeLists.txt
@@ -4,11 +4,16 @@ project(ParallelProject VERSION 1.0
   DESCRIPTION "Mail.ru TP IZ2"
   LANGUAGES C CXX)
 
-option(USE_PARALLEL "Using parallel implementation" OFF)
+option(USE_PARALLEL "Use parallel implementation" OFF)
+option(USE_DEBUG "Enter debug mode" OFF)
 
 set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/CMakeModules)
 set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -DPROC_DEBUG")
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wall -Werror -Wpedantic")
+
+if (USE_DEBUG)
+  add_definitions(-DDEBUG)
+endif()
 
 # Code coverage
 if (CMAKE_BUILD_TYPE MATCHES Debug)
