--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,10 +21,10 @@ jobs:
       run: cd iz2 && ./configure.sh 0 Release
     - name: Make
       run: cd iz2 && cd build && make
-        #    - name: Test
-        #      run: cd iz2 && cd build && make coverage
-        #    - name: Archive code coverage results
-        #      uses: actions/upload-artifact@v2
-        #      with:
-        #        name: code-coverage-report
-        #        path: iz2/build/coverage/index.html
+    - name: Test
+      run: cd iz2 && cd build && make coverage
+    - name: Archive code coverage results
+      uses: actions/upload-artifact@v2
+      with:
+        name: code-coverage-report
+        path: iz2/build/coverage
