--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Run Linter
       run: cd iz2/src && cppcheck *.c
     - name: Configure
-      run: cd iz2 && ./configure.sh 0 Release
+      run: cd iz2 && ./configure.sh 1
     - name: Make
       run: cd iz2 && cd build && make
     - name: Test
