Extend code coverage ignore list

--- a/iz2/CMakeLists.txt
+++ b/iz2/CMakeLists.txt
@@ -26,7 +26,11 @@ if (CMAKE_BUILD_TYPE MATCHES Debug)
     EXCLUDE "${PROJECT_SOURCE_DIR}/build/*" 
     "${PROJECT_SOURCE_DIR}/tests/*" 
     "${PROJECT_SOURCE_DIR}/main/main.c" 
-    "${$PROJECT_SOURCE_DIR}/src/errors.c")
+    "${$PROJECT_SOURCE_DIR}/src/pos.c"
+    "${$PROJECT_SOURCE_DIR}/src/pos_array.c"
+    "${$PROJECT_SOURCE_DIR}/src/args.c"
+    "${$PROJECT_SOURCE_DIR}/src/io.c"
+    "${$PROJECT_SOURCE_DIR}/src/errors_handler.c")
 endif()
 
 enable_testing()
