remove useless static and dynamic libraries

--- a/iz2/src/CMakeLists.txt
+++ b/iz2/src/CMakeLists.txt
@@ -1,7 +1,5 @@
 add_library(parallel_mean SHARED parallel_mean.c)
-add_library(parallel_mean_static parallel_mean.c)
-add_library(naive_mean SHARED naive_mean.c)
-add_library(naive_mean_static naive_mean.c)
+add_library(naive_mean naive_mean.c)
 add_library(pos pos.c)
 add_library(args args.c)
 add_library(io io.c)
@@ -9,9 +7,7 @@ add_library(errors errors_handler.c)
 add_library(pos_array pos_array.c)
 
 target_include_directories(parallel_mean PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_include_directories(parallel_mean_static PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(naive_mean PUBLIC ${PROJECT_SOURCE_DIR}/include)
-target_include_directories(naive_mean_static PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(pos PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(pos_array PUBLIC ${PROJECT_SOURCE_DIR}/include)
 target_include_directories(args PUBLIC ${PROJECT_SOURCE_DIR}/include)
