Add stress tests to workflow

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -23,6 +23,10 @@ jobs:
       run: cd iz2 && cd build && make
     - name: Test
       run: cd iz2 && cd build && make coverage
+    -name: Generate big file
+      run: cd iz2/tests/stress_tests && ./generate_big_file.sh
+    -name: Stress test
+      run: cd iz2/tests/stress_tests && BUILD_DIR=../../build ./stress_test.sh
     - name: Archive code coverage results
       uses: actions/upload-artifact@v2
       with:
