change env variable

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -26,9 +26,7 @@ jobs:
     - name: Prepare stress test
       run: cd iz2/tests/stress_tests && ./generate_big_file.sh
     - name: Stress test
-      run: cd iz2/tests/stress_tests && ./stress_test.sh
-      env: 
-        BUILD_DIR: $GITHUB_WORKSPACE/iz2/build
+      run: cd iz2/tests/stress_tests && BUILD_DIR=../../build ./stress_test.sh
     - name: Archive code coverage results
       uses: actions/upload-artifact@v2
       with:
